style.css
/* ... */
#square11 {
    top: 10%;
    left: 50%;
    width: 27px;
    height: 27px;
}

#square12 {
    top: 25%;
    left: 65%;
    width: 33px;
    height: 33px;
}

#square13 {
    top: 40%;
    left: 80%;
    width: 19px;
    height: 19px;
}

#square14 {
    top: 55%;
    left: 95%;
    width: 21px;
    height: 21px;
}

#square15 {
    top: 15%;
    left: 15%;
    width: 26px;
    height: 26px;
}

#square16 {
    top: 30%;
    left: 30%;
    width: 29px;
    height: 29px;
}

#square17 {
    bottom: 0%;
    left: 85%;
    width: 36px;
    height: 36px;
}

#square18 {
    top: 65%;
    left: 87%;
    width: 39px;
    height: 39px;
}

#square19 {
    top: 75%;
    left: 85%;
    width: 24px;
    height: 24px;
}

#square20 {
    top: 20%;
    left: 85%;
    width: 31px;
    height: 31px;
}

@keyframes float {
    0% {
        transform: translateY(-10px);
        opacity: 1;
    }

    90% {
        opacity: 1;
    }

    100% {
        transform: translateY(100vh);
        opacity: 0;
    }
}

@keyframes flying {
    0% {
        transform: translateY(0px);
    }

    50% {
        transform: translateY(-10px);
    }

    100% {
        transform: translateY(0);
    }
}

@keyframes cloud_flying {
    0% {
        transform: translateX(0px);
    }

    50% {
        transform: translateX(-30px);
    }

    100% {
        transform: translateX(0);
    }
}

@keyframes bright {
    0% {
        filter: brightness(1);
    }

    50% {
        filter: brightness(1.4);
    }

    100% {
        filter: brightness(1);
    }
}

@keyframes sparkles_animation {
    0% {
        filter: brightness(2);
    }

    50% {
        filter: brightness(1);
    }

    100% {
        filter: brightness(3);
    }
}

@keyframes select-course-btn-animation {
    0% {
        filter: brightness(1);
        transform: scale(1);
    }

    50% {
        filter: brightness(1.4);
        transform: scale(1.03);
    }

    100% {
        filter: brightness(1);
        transform: scale(1);
    }
}

@media screen and (max-width: 600px) {
    header {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        height: 7vh;
    }

    .logo {
        width: 35vw;
    }

    .menu {
        display: none;
        flex-direction: row;
        align-items: center;
    }

    .menu.open {
        display: block;
    }

    .menu a {
        margin: 5px 0;
    }

    #open-menu-btn {
        width: 8vw;
        height: 50%;
        border: none;
        padding: 0;
        background: none;
        cursor: pointer;
        outline: none;
        background-image: url("res/open_mobile_menu_btn.png");
        background-position: center;
        background-size: contain;
        background-repeat: no-repeat;
    }

    #submit-app-photo {
        width: 30vw;
    }

    #submit-app-form {
        width: 30vw;
    }

    #submit-app-form input[type="submit"] {
        width: 100%;
    }

    #start-section {
        height: 85vh;
    }

    .top-decor {
        height: 13vh;
        background-size: cover;
    }

    #top-decor-without-bubbles {
        margin-top: -1px;
        height: 10vh;
        background-size: cover;
    }

    .bottom-decor {
        height: 13vh;
        background-size: cover;
    }

    .about-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding-left: 7%;
        padding-right: 7%;
        padding-top: 12vh;
        padding-bottom: 12vh;
    }

    .left {
        background: none;
        margin: 0;
    }

    .left h2 {
        font-size: 6vw;
        color: #4f3069;
    }

    .left p {
        font-size: 4vw;
        color: #333;
    }

    .right {
        background: none;
    }

    .right img {
        width: 100%;
        margin-top: 10vh;
    }

    #between-decor-purple {
        height: 20vh;
        padding-left: 10%;
        padding-right: 10%;
    }

    #between-decor-purple h3 {
        font-size: 6vw;
    }

    #courses-section {
        max-height: 150vh;
    }
    
    .courses-content {
        position: relative;
        padding-top: 10vh;
    }
    
    .courses-container {
        width: 100%;
        height: 100%;
        flex-direction: column;
        align-items: center;
    }
    
    .course-card {
        width: 60%;
        height: 20vh;
        margin: 5%;
        padding: 10px;
        box-shadow: 0 1% 1% #410E6A;
    }
    
    .course-card img {
        max-width: 40%;
    }
    
    .course-card-text {
        width: 70%;
        margin: 0 auto;
        transform: translateY(-35%);
    }
    
    .course-card-text h3 {
        font-size: 5vw;
    }
    
    .course-card-text p {
        font-size: 3.5vw;
    }
}

@media screen and (min-width: 601px) {
    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .header-items {
        display: flex;
        gap: 20px;
    }

    #open-menu-btn {
        display: none;
    }
}

